@@ -1,1 +1,3 @@
+Takuya TAKAHASHI <adgjmbehkncfilo1234@gmail.com>
+Yuki Shiga <y.shiga.91+yush1ga@gmail.com>
 takuya <info@yujilow.net>
